2006-05-30  Don Allingham  <don@gramps-project.org>
	* src/plugins/FilterEditor.py: start to bring into sync with
	code changes

2006-05-30  Alex Roitman  <shura@gramps-project.org>
	* various: break Report into a package.

2006-05-29  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py: insert name keys for indexing.
	* src/plugins/DetAncestralReport.py: insert name keys for indexing.
	* src/plugins/FamilyGroup.py: print descriptions for events.
	* src/PluginUtils/_ReportUtils.py: handle no person error

2006-05-29  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py (EditFamily.save): Typo.
	* configure.in: Set up for 2.1.5.

2006-05-28  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (stop_event): Properly import birth and
	death from the old XML.
	* src/Editors/_EditFamily.py (EditFamily.save): Typo.
	* src/plugins/Verify.py: Add double-clicking and mark/unmark/invert.
	* src/plugins/verify.glade: Add label.

2006-05-28  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/OpenOfficeDoc.py: Allow large cells to span pages (bug 0000165)
	* src/BaseDoc.py: Add key to write_text.
	* src/docgen/*: Add key to write_text.
	* src/PluginUtils/_ReportUtils.py: Add get_name_key.
	* src/plugins/FamilyGroup.py: insert name keys for indexing.
	* src/plugins/DescendReport.py: insert name keys for indexing.
	* src/plugins/IndivComplete.py: insert name keys for indexing.
	* src/plugins/AncestorReport.py: insert name keys for indexing.

2006-05-27  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: More updates.
	* src/docgen/LPRDoc.py: Typo.

2006-05-27  Brian Matherly  <brian@gramps-project.org>
	* src/gramps.py: Add provisions for local mo files for Windows

2006-05-26  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/IndivComplete.py: Add event notes.

2006-05-26  Alex Roitman  <shura@gramps-project.org>
	* src/BasicUtils.py (UpdateCallback.reset): Add method.